Datepicker text align fix

--- a/src/views/FormBuilder.css
+++ b/src/views/FormBuilder.css
@@ -43,6 +43,10 @@ h1 {
     padding-top: 80px;
 }
 
+.form-intro-header, .form-intro-field{
+    text-align: left;
+}
+
 .form-intro {
     background: white;
     box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
@@ -64,10 +68,6 @@ h1 {
 
 input, textarea, select {
     padding: 10px;
-}
-
-div {
-    text-align: left;
 }
 
 select {
